SolvedOverFlow

--- a/src/components/supplier/supRight/supright.scss
+++ b/src/components/supplier/supRight/supright.scss
@@ -26,7 +26,7 @@
     font-size: 19px;
   }
   .transactions {
-    height: calc(100vh - 395px);
+    height: calc(100vh - 489px);
     overflow-y: scroll;
   }
   .btn {
